fix(client): add overflow-x: auto to app-content instead

--- a/judgels-client/src/components/AppContent/AppContent.scss
+++ b/judgels-client/src/components/AppContent/AppContent.scss
@@ -1,4 +1,5 @@
 .app-content {
+  overflow-x: auto;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 35px;
